--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <title>Entire Foolhardy Hummingbird</title>
-    <meta property="og:title" content="Entire Foolhardy Hummingbird" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta property="twitter:card" content="summary_large_image" />
-
     <style data-tag="reset-style-sheet">
       html {  line-height: 1.15;}body {  margin: 0;}* {  box-sizing: border-box;  border-width: 0;  border-style: solid;  -webkit-font-smoothing: antialiased;}p,li,ul,pre,div,h1,h2,h3,h4,h5,h6,figure,blockquote,figcaption {  margin: 0;  padding: 0;}button {  background-color: transparent;}button,input,optgroup,select,textarea {  font-family: inherit;  font-size: 100%;  line-height: 1.15;  margin: 0;}button,select {  text-transform: none;}button,[type="button"],[type="reset"],[type="submit"] {  -webkit-appearance: button;  color: inherit;}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner {  border-style: none;  padding: 0;}button:-moz-focus,[type="button"]:-moz-focus,[type="reset"]:-moz-focus,[type="submit"]:-moz-focus {  outline: 1px dotted ButtonText;}a {  color: inherit;  text-decoration: inherit;}input {  padding: 2px 4px;}img {  display: block;}details {  display: block;  margin: 0;  padding: 0;}summary::-webkit-details-marker {  display: none;}[data-thq="accordion"] [data-thq="accordion-content"] {  max-height: 0;  overflow: hidden;  transition: max-height 0.3s ease-in-out;  padding: 0;}[data-thq="accordion"] details[data-thq="accordion-trigger"][open] + [data-thq="accordion-content"] {  max-height: 1000vh;}details[data-thq="accordion-trigger"][open] summary [data-thq="accordion-icon"] {  transform: rotate(180deg);}html { scroll-behavior: smooth  }
     </style>
@@ -35,17 +34,17 @@
     />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=STIX+Two+Text:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&amp;display=swap"
+      href="https://fonts.googleapis.com/css2?family=STIX+Two+Text:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap"
       data-tag="font"
     />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap"
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       data-tag="font"
     />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       data-tag="font"
     />
     <link
@@ -54,262 +53,6 @@
     />
   </head>
   <body>
-    <link rel="stylesheet" href="./style.css" />
-    <div>
-      <link href="./index.css" rel="stylesheet" />
-
-      <div class="home-container">
-        <banner3-wrapper class="banner3-wrapper">
-          <!--Banner3 component-->
-          <div class="banner3-container1 thq-section-padding">
-            <div class="banner3-container2"></div>
-            <img
-              alt="image"
-              src="public/definitiva%20logo%20uro%20(1)-600h.png"
-              class="banner3-image"
-            />
-            <div class="banner3-max-width thq-section-max-width">
-              <div class="banner3-container3"></div>
-              <h3 class="banner3-heading thq-heading-3">
-                <fragment class="home-fragment10">
-                  <span class="home-text10">
-                    <span><!--Content for locale text_iBrGse--></span>
-                  </span>
-                </fragment>
-              </h3>
-            </div>
-          </div>
-        </banner3-wrapper>
-        <features24-wrapper class="features24-wrapper">
-          <!--Features24 component-->
-          <div id="Features24" class="thq-section-padding">
-            <div class="features24-container2 thq-section-max-width">
-              <div class="features24-image-container">
-                <img
-                  alt="feature 1"
-                  src="https://images.unsplash.com/photo-1552250575-e508473b090f?ixid=M3w5MTMyMXwwfDF8c2VhcmNofDE1Mnx8YWJzdHJhY3R8ZW58MHx8fHwxNzE2MjAxNjAyfDA&amp;ixlib=rb-4.0.3&amp;w=1400"
-                  class="features24-image1 thq-img-ratio-16-9"
-                />
-                <img
-                  alt="image"
-                  src="https://images.unsplash.com/photo-1505356822725-08ad25f3ffe4?ixid=M3w5MTMyMXwwfDF8c2VhcmNofDQ3fHxhYnN0cmFjdHxlbnwwfHx8fDE3MTYyMDEzMDd8MA&amp;ixlib=rb-4.0.3&amp;w=1400"
-                  class="features24-image2 thq-img-ratio-16-9"
-                />
-                <img
-                  alt="image"
-                  src="https://images.unsplash.com/photo-1618172193622-ae2d025f4032?ixid=M3w5MTMyMXwwfDF8c2VhcmNofDg0fHxhYnN0cmFjdHxlbnwwfHx8fDE3MTYyMDE1NTZ8MA&amp;ixlib=rb-4.0.3&amp;w=1400"
-                  class="features24-image3 thq-img-ratio-16-9"
-                />
-              </div>
-              <div class="features24-tabs-menu">
-                <div class="features24-tab-horizontal1">
-                  <div class="features24-divider-container1">
-                    <div class="features24-container3"></div>
-                  </div>
-                  <div class="features24-content1">
-                    <h2 class="thq-heading-2">
-                      <fragment class="home-fragment11">
-                        <span class="home-text11">
-                          <span><!--Content for locale text_pN4Nuz--></span>
-                        </span>
-                      </fragment>
-                    </h2>
-                    <span class="thq-body-small">
-                      <fragment class="home-fragment14">
-                        <span class="home-text14">
-                          <span><!--Content for locale text_hp-0kr--></span>
-                        </span>
-                      </fragment>
-                    </span>
-                  </div>
-                </div>
-                <div class="features24-tab-horizontal2">
-                  <div class="features24-divider-container2">
-                    <div class="features24-container4"></div>
-                  </div>
-                  <div class="features24-content2">
-                    <h2 class="thq-heading-2">
-                      <fragment class="home-fragment12">
-                        <span class="home-text12">
-                          <span><!--Content for locale text_5p3Pfh--></span>
-                        </span>
-                      </fragment>
-                    </h2>
-                    <span class="thq-body-small">
-                      <fragment class="home-fragment15">
-                        <span class="home-text15">
-                          <span><!--Content for locale text__oawNV--></span>
-                        </span>
-                      </fragment>
-                    </span>
-                  </div>
-                </div>
-                <div class="features24-tab-horizontal3">
-                  <div class="features24-divider-container3">
-                    <div class="features24-container5"></div>
-                  </div>
-                  <div class="features24-content3">
-                    <h2 class="thq-heading-2">
-                      <fragment class="home-fragment13">
-                        <span class="home-text13">
-                          <span><!--Content for locale text_BCFgVl--></span>
-                        </span>
-                      </fragment>
-                    </h2>
-                    <span class="thq-body-small">
-                      <fragment class="home-fragment16">
-                        <span class="home-text16">
-                          <span><!--Content for locale text_9_blVz--></span>
-                        </span>
-                      </fragment>
-                    </span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </features24-wrapper>
-        <contact10-wrapper
-          class="contact10-wrapper"
-          rootclassname="contact10undefined"
-        >
-          <!--Contact10 component-->
-          <div
-            id="Contact10"
-            class="contact10-container1 thq-section-padding contact10root-class-name"
-          >
-            <div class="contact10-max-width thq-section-max-width">
-              <div class="contact10-content1 thq-flex-row">
-                <div class="contact10-content2">
-                  <h2 class="thq-heading-2">
-                    <fragment class="home-fragment17">
-                      <span class="home-text17">
-                        <span><!--Content for locale text_KrosFC--></span>
-                      </span>
-                    </fragment>
-                  </h2>
-                </div>
-              </div>
-              <div class="contact10-container2">
-                <div class="contact10-container3">
-                  <h3 class="contact10-text2 thq-heading-3">
-                    <fragment class="home-fragment18">
-                      <span class="home-text18">
-                        <span><!--Content for locale text_GmaIu5--></span>
-                      </span>
-                    </fragment>
-                  </h3>
-                  <p class="contact10-text3 thq-body-large">
-                    <fragment class="home-fragment19">
-                      <span class="home-text19">
-                        <span><!--Content for locale text_L87DmH--></span>
-                      </span>
-                    </fragment>
-                  </p>
-                  <div class="contact10-container4">
-                    <img
-                      src="public/istockphoto-494254150-612x612-400h.jpg"
-                      alt="Headquarters Image"
-                      class="contact10-image thq-img-ratio-16-9"
-                    />
-                    <a
-                      href="mailto:contac@uroboros.ee?subject="
-                      class="contact10email"
-                    >
-                      <fragment class="home-fragment20">
-                        <span class="home-text20">
-                          <span><!--Content for locale text_kNZS7R--></span>
-                        </span>
-                      </fragment>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </contact10-wrapper>
-        <footer4-wrapper class="footer4-wrapper">
-          <!--Footer4 component-->
-          <footer class="footer4-footer7 thq-section-padding">
-            <div class="footer4-max-width thq-section-max-width">
-              <div class="footer4-content">
-                <div class="footer4-logo"></div>
-                <div class="footer4-links">
-                  <a
-                    href="https://example.com"
-                    target="_blank"
-                    rel="noreferrer noopener"
-                    class="thq-body-small"
-                  >
-                    <fragment class="home-fragment21">
-                      <span class="home-text21">
-                        <span><!--Content for locale text_oGe6uA--></span>
-                      </span>
-                    </fragment>
-                  </a>
-                  <a
-                    href="https://example.com"
-                    target="_blank"
-                    rel="noreferrer noopener"
-                    class="thq-body-small"
-                  >
-                    <fragment class="home-fragment22">
-                      <span class="home-text22">
-                        <span><!--Content for locale text_Vyr-yi--></span>
-                      </span>
-                    </fragment>
-                  </a>
-                  <a
-                    href="https://example.com"
-                    target="_blank"
-                    rel="noreferrer noopener"
-                    class="thq-body-small"
-                  >
-                    <fragment class="home-fragment23">
-                      <span class="home-text23">
-                        <span><!--Content for locale text_qRhXSG--></span>
-                      </span>
-                    </fragment>
-                  </a>
-                </div>
-              </div>
-              <div class="footer4-credits">
-                <div class="thq-divider-horizontal"></div>
-                <div class="footer4-row">
-                  <div class="footer4-container">
-                    <span class="thq-body-small">
-                      <span><!--Content for locale text_O6QNVC--></span>
-                    </span>
-                  </div>
-                  <div class="footer4-footer-links">
-                    <span class="footer4-text11 thq-body-small">
-                      <fragment class="home-fragment26">
-                        <span class="home-text26">
-                          <span><!--Content for locale text_W-smK5--></span>
-                        </span>
-                      </fragment>
-                    </span>
-                    <span class="thq-body-small">
-                      <fragment class="home-fragment24">
-                        <span class="home-text24">
-                          <span><!--Content for locale text_22MOOM--></span>
-                        </span>
-                      </fragment>
-                    </span>
-                    <span class="thq-body-small">
-                      <fragment class="home-fragment25">
-                        <span class="home-text25">
-                          <span><!--Content for locale text_UUVWiD--></span>
-                        </span>
-                      </fragment>
-                    </span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </footer>
-        </footer4-wrapper>
-      </div>
-    </div>
+    <div id="app"></div>
   </body>
 </html>
